# cnn-bilstm-macroeconomic-forecasting

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
configs/: baselines.yaml  covariates_table_a1.yaml  dataset.yaml
configs/experiment/: multivariate_multistep.yaml  multivariate_onestep.yaml  smoke_tuned_multivariate_multistep.yaml  smoke_tuned_univariate_multistep.yaml  smoke_tuned_univariate_multistep_consumption.yaml  smoke_tuned_univariate_multistep_lb24.yaml  smoke_univariate_multistep.yaml  univariate_multistep.yaml  univariate_onestep.yaml
data/: data_all_variables.xls
scripts/: 00_validate_raw_data.py  01_build_processed_dataset.py  02_run_baselines.py  03_train_deep_models.py  04_evaluate_all.py  05_make_tables_and_figures.py  _common.py
src/macro_bilstm/: __init__.py
src/macro_bilstm/baselines/: arima.py  elasticnet.py  var.py  xgboost.py
src/macro_bilstm/data/: build.py  io.py  scalers.py  schema.py  splits.py  transform.py  windowing.py
src/macro_bilstm/evaluation/: evaluate.py  metrics.py  plots.py  stats_tests.py
src/macro_bilstm/models/: _constraints.py  _init.py  bilstm_torch.py  cnn_bilstm_torch.py
src/macro_bilstm/training/: train_torch.py  tuning.py
src/macro_bilstm/utils/: artifacts.py  config.py  experiment.py  hashing.py  seed.py
tests/: test_scalers_no_leakage.py  test_windowing.py
