[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "macro-bilstm"
version = "0.1.0"
description = "Reproducible CNN–BiLSTM macroeconomic forecasting experiments"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "joblib>=1.3",
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.0",
  "pyarrow>=14.0",
  "pyyaml>=6.0",
  "scikit-learn>=1.4",
  "scipy>=1.11",
  "torch>=2.0",
  "xlrd>=2.0.1",
]

[project.optional-dependencies]
baselines = [
  "statsmodels>=0.14",
  "xgboost>=2.0",
]
dev = [
  "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

